--- a/azure_api_container/aks/pod_container/cluster/sg_kub.yaml
+++ b/azure_api_container/aks/pod_container/cluster/sg_kub.yaml
@@ -45,7 +45,7 @@ spec:
       serviceAccountName: queue-acc
       containers:
       - name: queue
-        image: sgbiodevpipelines.azurecr.io/seagen-azure-aks-queue:5218c29
+        image: bgamiss.azurecr.io/bgamiss_queue:5218c29
         ports:
         - containerPort: 5000
         resources:
